# neptune

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/neptune-cli/: Cargo.toml
crates/neptune-cli/src/: main.rs
crates/neptune-core/: Cargo.toml
crates/neptune-core/src/: lib.rs  lockfile.rs  manifest.rs  paths.rs  resolver.rs  util.rs
crates/neptune-io/: Cargo.toml
crates/neptune-io/src/: fs.rs  lib.rs
