[workspace]
resolver = "2"
members = [
  "crates/neptune-core",
  "crates/neptune-io",
  "crates/neptune-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/root7211/neptune"
homepage = "https://github.com/root7211/neptune"
description = "A package manager for Nelua"
keywords = ["nelua", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
sha2 = "0.10"
hex = "0.4"
directories = "5"
fs2 = "0.4"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
