[package]
name = "neptune-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Neptune package manager"

[[bin]]
name = "npt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
toml.workspace = true
semver.workspace = true
sha2.workspace = true
hex.workspace = true
directories.workspace = true
fs2.workspace = true
tempfile.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
neptune-core = { path = "../neptune-core" }
neptune-io = { path = "../neptune-io" }
